[Blink/BGPT] Add directly composited image support for BGPT

This CL adds code to PaintPropertyTreeBuilder to create transform node
for CSS object-fit. Currently only LayoutImage is supported.

BUG=854195

Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: If9002cae344c4a27c2c45cd8a7d9b94dda236861
Reviewed-on: https://chromium-review.googlesource.com/1168471
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582083}
Former-commit-id: b77692bfed57cce20380850fb3b28a492998ebef