third_party/blink/renderer/core/layout/layout_image.h
@@ -78,6 +78,9 @@ class CORE_EXPORT LayoutImage : public LayoutReplaced {
   float ImageDevicePixelRatio() const { return image_device_pixel_ratio_; }
 
   void IntrinsicSizeChanged() override {
+    // The replaced content transform depends on the intrinsic size (see:
+    // FragmentPaintPropertyTreeBuilder::UpdateReplacedContentTransform).
+    SetNeedsPaintPropertyUpdate();
     if (image_resource_)
       ImageChanged(image_resource_->ImagePtr(), CanDeferInvalidation::kNo);
   }
